[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/general/textbox_2.png" type="Texture" id=1]
[ext_resource path="res://art/general/nt_right.png" type="Texture" id=2]
[ext_resource path="res://art/general/nt_middle.png" type="Texture" id=3]
[ext_resource path="res://System/UI/Textbox.gd" type="Script" id=4]
[ext_resource path="res://art/general/nt_left.png" type="Texture" id=5]
[ext_resource path="res://System/UI/TextboxBackdrop.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 127, 31 )

[sub_resource type="GDScript" id=2]
script/source = "extends RichTextLabel


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	print(get_content_height())


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[node name="Textbox" type="Node2D" groups=["TEXTBOX_GROUP"]]
script = ExtResource( 4 )
tb_timer = NodePath("Timer")
text_label_path = NodePath("Handle/Backdrop/TextLabel")

[node name="Handle" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, 129 )

[node name="Backdrop" type="Node2D" parent="Handle"]
script = ExtResource( 6 )

[node name="Textbox2" type="Sprite" parent="Handle/Backdrop"]
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="Handle/Backdrop/Textbox2"]
position = Vector2( 128, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Handle/Backdrop/Textbox2/Area2D"]
shape = SubResource( 1 )

[node name="TextLabel" type="RichTextLabel" parent="Handle/Backdrop"]
unique_name_in_owner = true
anchor_right = 10.0
margin_left = 2.0
margin_top = 2.0
margin_right = 256.0
margin_bottom = 65.0
mouse_filter = 2
bbcode_enabled = true
bbcode_text = "This{n}text{n}is vary &long but wont break on spaces:andshouldgoto4lineswhichmeansthatthereshouldactually&be3textboxeswhereyouclickoneanditmovesontothenextone."
text = "This{n}text{n}is vary &long but wont break on spaces:andshouldgoto4lineswhichmeansthatthereshouldactually&be3textboxeswhereyouclickoneanditmovesontothenextone."
scroll_active = false

[node name="NametagImage" type="Node2D" parent="Handle"]
unique_name_in_owner = true
position = Vector2( 2, -15 )

[node name="NametagBackdrop" type="Node2D" parent="Handle"]
unique_name_in_owner = true
position = Vector2( 0, -13 )

[node name="NtLeft" type="Sprite" parent="Handle/NametagBackdrop"]
visible = false
texture = ExtResource( 5 )
centered = false

[node name="NtMiddle" type="Sprite" parent="Handle/NametagBackdrop"]
visible = false
position = Vector2( 100, 0 )
scale = Vector2( 200, 1 )
texture = ExtResource( 3 )
centered = false

[node name="NtRight" type="Sprite" parent="Handle/NametagBackdrop"]
visible = false
position = Vector2( 200, 0 )
texture = ExtResource( 2 )
centered = false

[node name="NametagLabel" type="Label" parent="Handle/NametagBackdrop"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 194.0
margin_bottom = 14.0
text = "Somebody"

[node name="Timer" type="Timer" parent="."]

[node name="WidthChecker" type="RichTextLabel" parent="."]
visible = false
margin_left = 2.0
margin_top = 77.0
margin_right = 256.0
margin_bottom = 108.0
custom_colors/default_color = Color( 0.352941, 0.898039, 0.92549, 1 )
script = SubResource( 2 )

[connection signal="input_event" from="Handle/Backdrop/Textbox2/Area2D" to="." method="_on_Area2D_input_event"]
